# sol-cerberus-demo

./: .gitmodules  Anchor.toml  Makefile  README.md  deployment.md  development.md  package.json
programs/sol-cerberus-demo/: Cargo.toml
programs/sol-cerberus-demo/src/: errors.rs  instructions.rs  lib.rs  state.rs  validation.rs
programs/sol-cerberus-demo/src/instructions/: add.rs  delete.rs  delete_demo.rs  initialize_demo.rs  update.rs
programs/sol-cerberus-demo/src/state/: demo.rs
programs/sol-cerberus-demo/src/validation/: demo.rs  shapes.rs
tests/: 1_initialize_demo.ts  2_square.ts  3_circle.ts  4_triangle.ts  common.ts  constants.ts  sol-cerberus-demo.ts
