[package]
name = "sol-cerberus-demo"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sol_cerberus_demo"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.26.0"
anchor-spl = { version = "0.26.0", features = ["metadata"] }
solana-program = "1.13.5"
mpl-token-metadata = { version = "1.8.3", features = ["no-entrypoint"] }
sol-cerberus = { version = "0.1.3", features = ["cpi"] }
sol-cerberus-macros = { version = "0.1.2" }
